Fixing table alignment in IE9

--- a/modules/widgets/table/table.scss
+++ b/modules/widgets/table/table.scss
@@ -81,6 +81,10 @@ $module: '.table';
     }
   }
 
+  td, th {
+    text-align: left;
+  }
+
   &.last-right {
     td, th {
       &:last-child {
